# ClawCore_Unified

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  DOCS_SOVEREIGNTY.md  Dockerfile  Dockerfile.sandbox-browser  Dockerfile.sandbox-common  EVOLUCION_FINAL.md  INTEGRACION_CLAWCORE.md  INVENTARIO_CLAWCORE.md  MAPA_MODULAR.md  MEMORY.md  RAG_MEMORY_PLAN.md  README.md  SECURITY.md  SOUL.md  UNIFICACION_ESTATUS.md  appcast.xml  build_log.txt  clawcore.mjs  clawcore.podman.env  deploy_node.sh  docker-compose.yml  docker-setup.sh  docs.acp.md  estado_evolucion.json  fly.private.toml  fly.toml  install.sh  package.json  package.json.backup  package.json.original  parse-tar-buffer.mjs  parse-tar-buffer10.ts  parse-tar-buffer11.ts  parse-tar-buffer2.mjs  (+26 more)
.clawcore/: synapse_brain.json
dist-fixed/: logging-fixed.js
docs/: CNAME  brave-search.md  ci.md  date-time.md  docs.json  index.md  logging.md  network.md  perplexity.md  pi-dev.md  pi.md  prose.md  tts.md  vps.md
scripts/: auth-monitor.sh  build-and-run-mac.sh  build_icon.sh  bundle-a2ui.sh  canvas-a2ui-copy.js  canvas-a2ui-copy.ts  changelog-to-html.sh  claude-auth-status.sh  clawcore-doctor.ts  clawlog.sh  codesign-mac-app.sh  create-dmg.sh  debug-claude-usage.ts  label-open-issues.ts  make_appcast.sh  mobile-reauth.sh  notarize-mac-artifact.sh  package-mac-app.sh  package-mac-dist.sh  pr  protocol-gen-swift.ts  protocol-gen.ts  recover-orphaned-processes.sh  release-check.ts  restart-mac.sh  run-clawcore-podman.sh  run-node.mjs  sandbox-browser-entrypoint.sh  (+20 more)
(+2977 files in other folders)
