[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clawcore"
version = "2026.2.16"
description = "Sovereign AI Neural Core"
dependencies = [
    "psutil",
    "llama-cpp-python>=0.2.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["clawcore_system*"]
